--- a/styles.css
+++ b/styles.css
@@ -281,3 +281,276 @@
         margin-left: 0;
     }
 }
+
+
+/* ACTIVITY CSS */
+
+#gameboard{
+    margin-top:20px;
+    display:none;
+}
+
+#results{
+    display:none;
+}
+
+#answer-input{
+    width:100%;
+    border-radius: 5px;
+    padding:5px;
+    margin-top:5px;
+    margin-bottom:5px;
+}
+
+
+#quit-button{
+    display:none;
+}
+
+#counter{
+    margin-top:5px;
+    margin-bottom:5px;
+    text-align: center;
+    font-size: 20px;
+    background-color: #f7f7f7;
+    padding: 10px;
+    font-family: 'Orbitron', sans-serif;
+    border:1px solid rgba(0,0,0,0.3);
+}
+
+#question{
+    border: 3px solid #6780ca;
+    margin-top:5px;
+    margin-bottom:5px;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+    background-color:#f5f5f5;
+}
+
+.a4e-flashcard-img{
+    width:64px;
+    height:auto;
+    display:block;
+}
+
+.a4e-distractors, #question{
+    text-align: center;
+    font-size: 20px;
+}
+
+.a4e-distractor:hover{
+    background-color: #f7f7f7;
+}
+
+.a4e-distractor{
+    cursor: pointer;
+}
+
+.a4e-correct-glyph{
+    color: green;
+}
+
+.a4e-incorrect-glyph{
+    color:red;
+}
+
+.a4e-click-disabled{
+    pointer-events: none;
+}
+
+.a4e-flashcards-container{
+    text-align: center;
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
+.a4e-card,.a4e-flashcards-container .front,.a4e-flashcards-container .back{
+    width:250px;
+    height:200px;
+}
+
+.a4e-flashcards-container .back{
+    position:relative;
+    background-color:#F7E7E7;
+    border:1px solid rgba(0,0,0,0.3);
+    padding:10px;
+}
+
+.a4e-flashcards-container .front{
+    position:relative;
+    background-color:#FFFFFF;
+    border:1px solid rgba(0,0,0,0.3);
+    padding:10px;
+}
+
+.a4e-img-def{
+    background-repeat: no-repeat;
+    background-position: center 0px;
+    background-size: auto 150px;
+}
+
+.a4e-no-def{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.a4e-flashcards-container .front-label-no-img{
+    position:absolute;
+    bottom:0;
+    right:0;
+    left:0;
+    top:0;
+    padding:5px;
+    transform-style: preserve-3d;
+}
+
+.a4e-flashcards-container .front-label {
+    position:absolute;
+    bottom:0;
+    right:0;
+    left:0;
+    top:150px;
+    border-top: 1px solid rgba(0,0,0,0.3);
+    padding: 5px;
+    transform-style: preserve-3d;
+}
+
+.a4e-card {
+    cursor: pointer;
+    display: inline-block;
+    margin: 5px;
+}
+
+.a4e-correct {
+    background-color: rgba(0,255,0,0.5) !important;
+}
+
+.a4e-incorrect{
+    background-color: rgba(255,0,0,0.5) !important;
+}
+
+.a4e-basic_feedback {
+    text-align: center;
+    padding:10px;
+    margin-bottom: 5px;
+}
+
+.a4e-detailed_feedback_div {
+    text-align: left;
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 5px;
+    margin: 5px;
+    display: inline-block;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    vertical-align: top;
+}
+
+#submitted {
+    height:64px;
+    padding:10px;
+    margin-top:5px;
+    margin-bottom:5px;
+    border:1px solid black;
+    text-align: center;
+    font-size: 30px;
+}
+.progress.a4e-progress {
+    display: flex;
+    height: 20px;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+}
+.a4e-progress .progress-bar {
+    -webkit-transition: width .6s ease;
+    -o-transition: width .6s ease;
+    transition: width .6s ease;
+}
+
+/* keyboard */
+
+.chunk-key{
+    width:64px;
+    height:64px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    border:1px solid black;
+    margin:5px;
+    display:inline-block;
+    cursor:pointer;
+}
+.chunk-key-inner{
+    width:64px;
+    height:64px;
+    display: flex;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
+    font-size:36px;
+}
+#chunk-input{
+    width:100%;
+    text-align:center;
+    border:1px solid black;
+    vertical-align: top;
+    padding-top:50px;
+    padding-bottom:60px;
+    position:relative;
+    box-sizing: border-box;
+}
+#chunk-typed{
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    width:100%;
+    height:40px;
+    border-bottom:1px solid black;
+    box-sizing: border-box;
+}
+#chunk-typed-inner{
+    height:40px;
+    font-size:26px;
+    width:100%;
+    overflow-x: auto;
+    box-sizing: border-box;
+    background-color: #f5f5f5;
+    border-bottom:1px solid black;
+}
+#chunk-input-controls{
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    width:100%;
+    height:50px;
+    border-top:1px solid black;
+    cursor:pointer;
+    padding:0;
+    margin:0;
+    box-sizing: border-box;
+}
+.chunk-input-control{
+    height:49px;
+    line-height: 50px;
+    width:50%;
+    display:inline-block;
+}
+.chunk-input-disabled{
+    opacity:0.3;
+    pointer-events:none;
+}
+.a4e-key-pressed{
+    background-color: rgba(0,0,0,0.3) !important;
+}
+.a4e-key-disabled{
+    pointer-events: none;
+    opacity:0.3;
+}
+
