--- a/templates/matchselect_page.mustache
+++ b/templates/matchselect_page.mustache
@@ -5,12 +5,14 @@
     <div class="panel panel-default" id='activity'>
         <div class="panel-body">
 
-            <button id='start-button' class='btn btn-success btn-lg center-block btn-block'><i class='fa fa-play'></i> Start Test</button>
-            <button id='quit-button' class='btn btn-danger btn-lg center-block btn-block'><i class='fa fa-power-off'></i> Quit</button>
-
-            <div id='vocab-list'></div>
+            <div id='vocab-list'>{{> mod_wordcards/vocablist_header}}<div id="vocab-list-inner">{{> mod_wordcards/loading}}</div></div>
 
             <div id='gameboard'>
+                <div class="mod_wordcards_activity_header">
+                    <h3>{{#str}}title_matchselect, mod_wordcards{{/str}}</h3>
+                    <div class="mod_wordcards_instructions">{{#str}}instructions_matchselect, mod_wordcards{{/str}}</div>
+                </div>
+                <button id='quit-button' class='btn btn-danger btn-lg center-block btn-block'><i class='fa fa-refresh'></i> {{#str}}backtostart, mod_wordcards{{/str}}</button>
                 <div id='counter'>
                     <div id='time-counter'></div>
                     <div id='question-counter'></div>
@@ -20,12 +22,13 @@
                     </div>
                 </div>
                 <div id='question'></div>
-                <div id="submitted"></div>
-                <button style="margin-bottom:5px;" id="next-button" class="btn btn-success btn-block btn-lg">Next <i class="fa fa-arrow-right"></i></button>
                 <div id='input'></div>
+                <button style="margin-bottom:5px;" id="next-button" class="btn btn-success btn-block btn-lg">{{#str}}next, mod_wordcards{{/str}} <i class="fa fa-arrow-right"></i></button>
             </div>
 
-            <div id='results'><div id='results-inner'></div><button id='close-results' class='btn btn-success btn-lg center-block btn-block'><i class='fa fa-check'></i> OK</button></div>
+            <div id='results'><div id='results-inner'>{{> mod_wordcards/loading}}</div>
+
+            </div>
 
         </div>
     </div>
