tweaks for speechcards

--- a/templates/vocablist.mustache
+++ b/templates/vocablist.mustache
@@ -1,8 +1,8 @@
 <button id='start-button' class='btn btn-success btn-lg center-block btn-block'><i class='fa fa-play'></i> {{#str}}starttest, mod_wordcards{{/str}}</button>
 <div class="a4e-flashcards-container">
 
-    <button style='margin:5px;width:40%;display:inline-block;' class='btn btn-block btn-lg btn-primary mod_wordcards_matching_frontbtn'>&#8635; {{#str}}word, mod_wordcards{{/str}}</button>
-    <button style='margin:5px;width:40%;display:inline-block;' class='btn btn-block btn-lg btn-danger mod_wordcards_matching_reversebtn'>&#8634; {{#str}}meaning, mod_wordcards{{/str}}</button>
+    <button style='margin:5px;width:40%;display:inline-block;' class='btn btn-block btn-lg btn-primary mod_wordcards_matching_frontbtn'>&#8635; {{#str}}meaning, mod_wordcards{{/str}}</button>
+    <button style='margin:5px;width:40%;display:inline-block;' class='btn btn-block btn-lg btn-danger mod_wordcards_matching_reversebtn'>&#8634; {{#str}}word, mod_wordcards{{/str}}</button>
 
     {{#terms}}
         {{#image}}
