fixed issue with speech cards results

--- a/templates/matchselect_page.mustache
+++ b/templates/matchselect_page.mustache
@@ -26,10 +26,7 @@
                 <button style="margin-bottom:5px;" id="next-button" class="btn btn-success btn-block btn-lg">{{#str}}next, mod_wordcards{{/str}} <i class="fa fa-arrow-right"></i></button>
             </div>
 
-            <div id='results'><div id='results-inner'>{{> mod_wordcards/loading}}</div>
-
-            </div>
-
+            <div id='results'><div id='results-inner'>{{> mod_wordcards/loading}}</div></div>
         </div>
     </div>
 
