--- a/templates/feedback_details.mustache
+++ b/templates/feedback_details.mustache
@@ -3,14 +3,14 @@
     <div class="a4e-detailed_feedback_div term-wrapper ">
         <div class="term">
             <div class="term-header">
-                <div class="term-title">{{question}}</div>
+                <div class="term-title">{{correct}}</div>
                 <div class="term-tick">
                     {{#points}}<div class="a4e-correct"><i class='fa fa-lg fa-check'></i></div>{{/points}}
                     {{^points}}<div class="a4e-incorrect"><i class='fa fa-lg fa-times'></i></div>{{/points}}
                 </div>
             </div>
             <div class="term-body">
-                {{correct}}
+                {{question}}
             </div>
         </div>
     </div>
