made it possible to choose from up to 5 practices and mode types

--- a/templates/matchtype_page.mustache
+++ b/templates/matchtype_page.mustache
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div id='question'></div>
-                <div id="submitted"></div>
+                <div id='submitted'></div>
                 <div id='input'></div>
                 <button style="margin-bottom:5px;" id="next-button" class="btn btn-success btn-block btn-lg">{{#str}}next, mod_wordcards{{/str}} <i class="fa fa-arrow-right"></i></button>
             </div>
