--- a/templates/speechcards_page.mustache
+++ b/templates/speechcards_page.mustache
@@ -29,8 +29,8 @@
                         <div class="glide__arrows wordcards-speechcards_toprow">
                             <!-- button class="btn btn-success wordcards-speechcards_button wordcards-speechcards_prevbutton" data-glide-dir="<">{{#str}}previous, mod_wordcards{{/str}}</button -->
                             <div id="speechcards_pushrecorder" class="wordcards-poodllrecorder" data-parent="{{wwwroot}}"
-                                 data-type="push" data-width="240" data-height="80" data-id="speechcards_widget"
-                                 data-media="audio" data-speechevents="1" data-language="{{language}}"
+                                 data-type="push" data-width="240" data-height="80" data-id="speechcards_widget" data-appid="mod_wordcards"
+                                 data-media="audio" data-speechevents="1" data-language="{{language}}" data-owner="{{owner}}"
                                  data-token="{{cloudpoodlltoken}}" >
                             </div>
 
