--- a/templates/speechcards_page.mustache
+++ b/templates/speechcards_page.mustache
@@ -27,17 +27,9 @@
                         <div id="submitted"></div>
                         <div class="glide__wrapper"><ul id="speechcards_thelist" class="glide__track"></ul></div>
                         <div class="glide__arrows wordcards-speechcards_toprow">
-                            <!-- button class="btn btn-success wordcards-speechcards_button wordcards-speechcards_prevbutton" data-glide-dir="<">{{#str}}previous, mod_wordcards{{/str}}</button -->
-                            <div id="speechcards_pushrecorder" class="wordcards-poodllrecorder" data-parent="{{wwwroot}}"
-                                 data-type="push" data-width="240" data-height="80" data-id="speechcards_widget" data-appid="mod_wordcards"
-                                 data-media="audio" data-speechevents="1" data-language="{{language}}" data-owner="{{owner}}"
-                                 data-token="{{cloudpoodlltoken}}" >
-                            </div>
-
-                            <!-- span id='speechcards_whatheard' class='wordcards-speechcards_whatheard'>........</span -->
+                            {{> mod_wordcards/cloudpushrecorder}}
                             <button class="btn btn-success wordcards-speechcards_button wordcards-speechcards_nextbutton " data-glide-dir=">">{{#str}}next, mod_wordcards{{/str}}</button>
                         </div>
-
                     </div>
                     <div id="speechcards_bullets" class="poodllspeechcards__bullets" style="display: none">
                 </div>
