tweaks to make sure it loads poodlloader.html so it works on ios

--- a/templates/cloudpushrecorder.mustache
+++ b/templates/cloudpushrecorder.mustache
@@ -1,5 +1,5 @@
 <div id="speechcards_pushrecorder" data-id="speechcards_pushrecorder" class="wordcards-poodllrecorder" data-parent="{{wwwroot}}"
      data-type="push" data-width="240" data-height="80" data-id="speechcards_widget" data-appid="mod_wordcards"
-     data-media="audio" data-speechevents="1" data-language="{{language}}" data-owner="{{owner}}"
+     data-media="audio" data-speechevents="1" data-language="{{language}}" data-owner="{{owner}}" data-localloader="/mod/wordcards/poodllloader.html"
      data-token="{{cloudpoodlltoken}}" >
 </div>
