--- a/templates/student_navigation.mustache
+++ b/templates/student_navigation.mustache
@@ -27,7 +27,7 @@
         {{#inactive}}
             <div class="student-tab">
         {{/inactive}}
-            <div class="step">{{step}}</div>
+            <div class="step"><i class='fa {{icon}}'></i>{{step}}</div>
             <div class="text">{{text}}</div>
         {{^inactive}}
             </a>
