--- a/styles.css
+++ b/styles.css
@@ -385,6 +385,12 @@
   font-size: 20px;
   padding: 10px;
   background-color: #f5f5f5;
+  height: 100px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: content-box;
 }
 
 .a4e-flashcard-img {
@@ -393,8 +399,17 @@
   display: block;
 }
 
-.a4e-distractors,
-#question {
+.a4e-prompt-img {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  bottom: 0;
+  height: 100px;
+  width: auto;
+  border: 1px solid black;
+}
+
+.a4e-distractors {
   text-align: center;
   font-size: 20px;
 }
@@ -495,8 +510,8 @@
 /* KEYBOARD */
 
 .chunk-key {
-  width: 64px;
-  height: 64px;
+  width: 50px;
+  height: 50px;
   background-color: #f5f5f5;
   border-radius: 5px;
   border: 1px solid black;
@@ -506,13 +521,11 @@
 }
 
 .chunk-key-inner {
-  width: 64px;
-  height: 64px;
+  width: 50px;
+  height: 50px;
   display: flex;
   justify-content: center;
-  /* align horizontal */
   align-items: center;
-  /* align vertical */
   font-size: 36px;
 }
 
@@ -553,10 +566,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100%;
   height: 50px;
   border-top: 1px solid black;
-  cursor: pointer;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -564,9 +575,12 @@
 
 .chunk-input-control {
   height: 49px;
-  line-height: 50px;
   width: 50%;
-  display: inline-block;
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
 }
 
 .chunk-input-disabled {
