--- a/templates/dictation_page.mustache
+++ b/templates/dictation_page.mustache
@@ -1,49 +1,32 @@
-<div class='container'>
-  <!-- Page contents -->
+<div id='vocab-list'>
+  {{> mod_wordcards/vocablist_header}}
+  <div id="vocab-list-inner">{{> mod_wordcards/loading}}</div>
+</div>
 
-  <div class="panel panel-default" id='activity'>
-    
-    <div class="panel-body">
-
-      <div id='vocab-list'>{{> mod_wordcards/vocablist_header}}
-        <div id="vocab-list-inner">{{> mod_wordcards/loading}}</div>
-      </div>
-
-      <div id='gameboard'>
-        <div class="mod_wordcards_activity_header">
-          <h3>{{#str}}title_dictation, mod_wordcards{{/str}}</h3>
-          <div class="mod_wordcards_instructions">{{#str}}instructions_dictation, mod_wordcards{{/str}}</div>
-        </div>
-        
-        <div id='counter'>
-          <div id='time-counter'></div>
-        </div>
-        
-        {{> mod_wordcards/progress_dots}}
-        
-        <div id='question'>
-          
-          <audio id="dictation_player"></audio>
-          
-          <button id='listen-button' class='btn btn-primary btn-block btn-lg'>
-            <i class="fa fa-volume-up"></i> {{#str}}listen, mod_wordcards{{/str}}
-          </button>
-          
-        </div>
-        
-        <div id="submitted"></div>
-        
-        <div id='input'></div>
-        
-      </div>
-
-      <div id='results'>
-        <div id='results-inner'>{{> mod_wordcards/loading}}</div>
-      </div>
-
-    </div>
-    
+<div id='gameboard'>
+  <div class="mod_wordcards_activity_header">
+    <h3>{{#str}}title_dictation, mod_wordcards{{/str}}</h3>
+    <div class="mod_wordcards_instructions">{{#str}}instructions_dictation, mod_wordcards{{/str}}</div>
   </div>
 
-  <!-- End page contents -->
+  <div id='counter'>
+    <div id='time-counter'></div>
+  </div>
+
+  {{> mod_wordcards/progress_dots}}
+
+  <audio id="dictation_player"></audio>
+
+  <button id='listen-button' class='btn btn-primary btn-block btn-lg'>
+          <i class="fa fa-volume-up"></i> {{#str}}listen, mod_wordcards{{/str}}
+        </button>
+
+  <div id="submitted"></div>
+
+  <div id='input'></div>
+
+</div>
+
+<div id='results'>
+  <div id='results-inner'>{{> mod_wordcards/loading}}</div>
 </div>
