--- a/templates/vocablist.mustache
+++ b/templates/vocablist.mustache
@@ -1,18 +1,21 @@
 <div class="a4e-flashcards-container">
 
-  <button style='margin:5px;width:100%;display:inline-block;' class='btn btn-block btn-lg btn-primary mod_wordcards_matching_frontbtn'>
+  <button class='btn btn-block btn-lg btn-primary mod_wordcards_matching_frontbtn'>
     <i class="fa fa-retweet"></i> {{#str}}flip, mod_wordcards{{/str}}
   </button> 
   
   {{#terms}} 
   
     <div class="a4e-card a4e-noselect">
-      
+
       <div style="background-image: url('{{image}}')" class="front">
         {{definition}}
       </div>
       
       <div class="back">
+        <button class="play-tts btn btn-secondary btn-sm">
+          <i class="fa fa-volume-up"></i>
+        </button>
         {{term}}
       </div>
       
