--- a/templates/vocablist.mustache
+++ b/templates/vocablist.mustache
@@ -2,7 +2,9 @@
 
   <button class='btn btn-block btn-lg btn-primary mod_wordcards_matching_frontbtn'>
     <i class="fa fa-retweet"></i> {{#str}}flip, mod_wordcards{{/str}}
-  </button> 
+  </button>
+
+   <audio id="poodll_vocabplayer"></audio>
   
   {{#terms}} 
   
@@ -13,7 +15,7 @@
       </div>
       
       <div class="back">
-        <button class="play-tts btn btn-secondary btn-sm">
+        <button class="play-tts btn btn-secondary btn-sm" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}">
           <i class="fa fa-volume-up"></i>
         </button>
         {{term}}
